platform/argocd/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: argocd
  namespace: argocd
  labels:
    external-dns: "true"  # Enable ExternalDNS for this route
  annotations:
    external-dns.alpha.kubernetes.io/target: "mcmn.me"
spec:
  parentRefs:
    - name: traefik-gateway
      namespace: traefik

  hostnames:
    - "argocd.mcmn.me"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - group: ""
          kind: Service
          name: argocd-server
          port: 80
          weight: 1
